Fix flexbox layout issues

--- a/app/styles/_containers.scss
+++ b/app/styles/_containers.scss
@@ -10,6 +10,6 @@
 .primary {
 	display: flex;
 	flex-flow: row nowrap;
-	flex: 1 auto;
+	flex: 1 1 auto;
 	overflow: hidden;
 }
