--- a/app/styles/_content.scss
+++ b/app/styles/_content.scss
@@ -2,17 +2,19 @@
 	flex: 1 1 auto;
 	display: flex;
 	flex-flow: row wrap;
+	align-content: flex-start;
 	color: $grey;
 	overflow-y: scroll;
 	padding: 1rem;
 
 	&__header {
-		flex: 1 100%;
+		flex: 1 1 100%;
 		display: flex;
+	    justify-content: space-between;
 	}
 
 	&__tabs {
-		flex: 1 100%;
+		flex: 1 1 100%;
 
 		li {
 			display: inline-block;
@@ -20,7 +22,7 @@
 	}
 
 	&__info {
-		flex: 1 auto;
+		flex: 1 1 auto;
 
 		li {
 			display: inline-block;
@@ -29,12 +31,13 @@
 	}
 
 	&__filter {
-		flex: 0 8rem;
+		flex: 0 0 8rem;
 		display: inline-block;
 	}
 
 	&__table {
-		flex: 1 100%;
+		flex: 1 1 100%;
+		border: 1px solid $grey;
 
 		&--header {
 			width: 100%;
@@ -46,6 +49,10 @@
 
 		&--body {
 			width: 100%;
+
+			tr {
+				border-top: 1px solid $grey;
+			}
 		}
 	}
 }
