--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -1,11 +1,11 @@
 .navigation {
-	flex: 0 14rem;
+	flex: 0 0 14rem;
 	display: flex;
 	flex-flow: column nowrap;
 	background-color: $grey;
 
 	&__list {
-		flex: 1 auto;
+		flex: 1 1 auto;
 
 		&--item {
 			display: flex;
