--- a/app/styles/_standards.scss
+++ b/app/styles/_standards.scss
@@ -3,6 +3,7 @@
 }
 
 body {
+	font-size: 14px;
 	color: $white;
 	font-family: $mont;
 	-webkit-font-smoothing: antialiased;
